agregado de alt en img

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         </div>
         <div class="galeria" id="galeria">
             <h2 class="galeria-tittle">GALERIA</h2>
-            <img src="./img/galeria1.jpg" alt="" class="galeria-img i1">
-            <img src="./img/galeria2.jpg" alt="" class="galeria-img i2">
-            <img src="./img/galeria3.jpg" alt="" class="galeria-img i3">
-            <img src="./img/galeria4.jpg" alt="" class="galeria-img i4">
-            <img src="./img/galeria5.jpg" alt="" class="galeria-img i5">
-            <img src="./img/galeria6.jpg" alt="" class="galeria-img i6">
-            <img src="./img/galeria7.jpg" alt="" class="galeria-img i7">
-            <img src="./img/galeria8.jpg" alt="" class="galeria-img i8">
+            <img src="./img/galeria1.jpg" alt="viandas con salteado de pollo con vegetales" class="galeria-img i1">
+            <img src="./img/galeria2.jpg" alt="viandas con salteado de fideos con vegetales" class="galeria-img i2">
+            <img src="./img/galeria3.jpg" alt="viandas con carne al horno con vegeetales al vapor" class="galeria-img i3">
+            <img src="./img/galeria4.jpg" alt="viandas surtidas con carne empanada, salsas, ensaladas y pan" class="galeria-img i4">
+            <img src="./img/galeria5.jpg" alt="viandas con tomates rellenos y ensalada de lechuga, zanahoria y pepino" class="galeria-img i5">
+            <img src="./img/galeria6.jpg" alt="viandas surtidas con medallones de pescado y ensalada tricolor, lasagna y arroz con vegetales" class="galeria-img i6">
+            <img src="./img/galeria7.jpg" alt="viandas con milanesas y ensalada tibia de remolacha, zanahoria y zapallito verde" class="galeria-img i7">
+            <img src="./img/galeria8.jpg" alt="viandas con risotto" class="galeria-img i8">
         </div>
         <div class="descargar" id="descargar">
             <div class="descargar-text">
