sing up modified

--- a/singUp/index.html
+++ b/singUp/index.html
@@ -12,7 +12,7 @@
             <span class="logo">
                 <i class="fa-solid fa-utensils"></i>
             </span>
-            <h1>Registrate para acceder a nuestros servivios:</h1>
+            <h1>Registrate para acceder a nuestros servicios:</h1>
             <form action="">
                 <div class="container-input">
                     <input type="email" id="e-mail" placeholder="Correo electronico">
